--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ nav {
     left: 0;
     width: 100%;
     height: 3px;
-    background: linear-gradient(90deg, #ff0000, #ffff00, #00ff00, #00ffff, #0000ff, #ff00ff);
+    background: linear-gradient(90deg, #40C49B, #991B1B, #404040);
     background-size: 600% 100%;
     animation: gradient 10s linear infinite;
 }
@@ -93,16 +93,25 @@ section h2 {
 /* Project Styles */
 .project {
     background: #eee;
-    padding: 10px;
+    padding: 20px;
     margin-bottom: 15px;
     border-radius: 5px;
 }
 
+.project-content {
+    display: flex;
+    align-items: center; /* Vertically align image and text */
+}
+
 .project-image {
-    max-width: 100%;
+    width: 200px; /* Adjust image width as needed */
     height: auto;
     border-radius: 5px;
-    margin-bottom: 10px;
+    margin-right: 20px; /* Add spacing between image and text */
+}
+
+.project-text {
+    flex: 1; /* Allow text to take up remaining space */
 }
 
 .project a {
